--- a/css/edbox.css
+++ b/css/edbox.css
@@ -1,20 +1,20 @@
-/* boxClass = box (default) */
+/* prefixId = box (default) */
 #box{
 	overflow:hidden;
 }
 #box,
 #box-load{
 	border-radius:8px;
-	border:5px solid rgba(0,0,0,.8);
-	background-color:#fff;
-	/*box-shadow:0 0 10px rgba(0, 0, 0, 0.5);*/
+	background-color:rgba(0, 0, 0, .8);
+	box-shadow:0 0 10px rgba(0, 0, 0, .5);
 }
 #box-load{
 	padding:10px;
+	background: #fff;
 }
 #box-overlay{
 	background:#000;
-	opacity:.1;
+	opacity:.5;
 }
 #box-header{
 	background:url("../images/bg-header.png") repeat-x;
@@ -32,51 +32,20 @@
 	color:#333;
 	font-weight:bold;
 }
-/*#box-close{
+#box-close{
 	white-space:nowrap;
-	top:0;
-	right:0;
+	top:5px;
+	right:5px;
 	border:0;
 	background:none;
 	color:#000;
-}*/
+}
 #box-close img{
 	display:block;
 	border:0;
 }
-
-
-/* modalClass = modal (default) */
-.modal{
-	padding:24px;
-}
-.modal,
-.modal-load{
-	border:1px solid red;
-	background-color:#FFCECE;
-}
-.modal-load{
-	padding:10px;
-	border-radius:34px;
-}
-.modal-content{
-	padding:20px;
-	border:5px solid green;
-	background:blue;
-}
-.modal-overlay{
-	background:#000;
-	opacity:.5;
-}
-.modal > .modal-close{
-	white-space:nowrap;
-	top:0;
-	right:0;
-	border:0;
-	background:none;
-	color:#000;
-}
-.modal > .modal-close img{
-	display:block;
-	border:0;
+#box-error{
+	background: red;
+	color: #fff;
+	padding: 30px;
 }
